[package]
name = "tide-secure-cookie-session"
version = "0.1.0"
authors = ["pbzweihander <pbzweihander@spoqa.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pbzweihander/tide-secure-cookie-session"

[dependencies]
anyhow = "1.0.33"
async-trait = "0.1.41"
base64 = "0.13.0"
hmac = "0.9.0"
serde = "1.0.116"
serde_json = "1.0.59"
sha-1 = "0.9.1"
tide = "0.13.0"

[dev-dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
